<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pagina_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ipleira.estg.qwartus.PaginaUser">


    <TextView
        android:text="@string/PaginaUserNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="Exemplo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNome"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView7"
        android:layout_marginStart="13dp"
        android:textSize="18sp" />

    <TextView
        android:text="Exemplo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView9"
        android:layout_marginStart="13dp"
        android:id="@+id/tvApelido"
        android:textSize="18sp" />

    <TextView
        android:text="@string/PaginaUserApelido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:id="@+id/textView9"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvNome" />

    <TextView
        android:text="9111111111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView11"
        android:layout_toEndOf="@+id/textView11"
        android:layout_marginStart="18dp"
        android:id="@+id/tvContato"
        android:textSize="18sp" />

    <TextView
        android:text="@string/PaginaUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView13"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="Exemplo@email.pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignStart="@+id/tvNome"
        android:id="@+id/tvEmail"
        android:textSize="18sp" />

    <TextView
        android:text="@string/PaginaUserContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView11"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnAlterarContactoAlterar"
        android:id="@+id/btnAlterarContacto"
        android:layout_width="@dimen/LayoutPaginaUserBtnContatoWidth"
        android:layout_height="@dimen/LayoutPaginaUserBtnContatoHeight"
        android:layout_alignBaseline="@+id/tvContato"
        android:layout_alignBottom="@+id/tvContato"
        android:layout_toEndOf="@+id/tvEmail" />

    <TextView
        android:text="@string/PaginaUserNrAnuncios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView16"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNumAnun"
        android:textSize="18sp"
        android:layout_above="@+id/btnAnuncios"
        android:layout_alignStart="@+id/tvApelido" />

    <Button
        android:text="@string/PaginaUserBtnNovoAnuncio"
        android:layout_width="@dimen/LayoutPaginaUserBtnAnunciosWidth"
        android:id="@+id/btnNovoAnuncio"
        android:layout_height="@dimen/LayoutPaginaUserBtnAnunciosHight"
        android:textStyle="normal|bold"
        android:layout_below="@+id/btnAnuncios"
        android:layout_alignStart="@+id/btnAnuncios" />

    <Button
        android:text="@string/PaginaUserBtnAnuncios"
        android:layout_width="@dimen/LayoutPaginaUserBtnAnunciosWidth"
        android:layout_marginTop="25dp"
        android:id="@+id/btnAnuncios"
        android:layout_height="@dimen/LayoutPaginaUserBtnAnunciosHight"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
