<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ipleira.estg.qwartus.RegisterPage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/qwartus2"
            android:id="@+id/QwartusLogo" />

        <TextView
            android:text="@string/username"
            android:textSize="@dimen/menuTextDimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUserName" />

        <TextView
            android:text="@string/email"
            android:textSize="@dimen/menuTextDimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail" />

        <TextView
            android:text="@string/password"
            android:textSize="@dimen/menuTextDimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword" />

        <TextView
            android:text="@string/confirmpassword"
            android:textSize="@dimen/menuTextDimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvConfirmPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etConfirmPassword" />

        <Button
            android:text="@string/registar"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:textSize="@dimen/menuTextButtonDimensions"
            android:id="@+id/button2" />
    </LinearLayout>
</RelativeLayout>
