<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ipleira.estg.qwartus.LoginPage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/qwartus2"
            android:id="@+id/QwartusLogo" />

        <TextView
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/menuTextDimensions"
            android:id="@+id/tvUserName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/etUserName" />

        <Space
            android:layout_width="match_parent"
            android:layout_weight="0.04"
            android:layout_height="15dp" />

        <TextView
            android:text="@string/password"
            android:textSize="@dimen/menuTextDimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:textSize="@dimen/menuTextButtonDimensions"
            android:id="@+id/button" />
    </LinearLayout>
</RelativeLayout>
